feat: imputed missing values and removed outliers

--- a/notebooks/benin_eda.ipynb
+++ b/notebooks/benin_eda.ipynb
@@ -565,6 +565,36 @@
     "missing_pct = df.isna().mean() * 100\n",
     "missing_pct[missing_pct > 5]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e6e183a",
+   "metadata": {},
+   "source": [
+    "# Handle missing values & detect outliers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8386f5c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import zscore\n",
+    "from scipy.stats import zscore\n",
+    "\n",
+    "# Columns to check\n",
+    "cols = ['GHI', 'DNI', 'DHI', 'ModA', 'ModB', 'WS', 'WSgust']\n",
+    "\n",
+    "# Impute missing values with median\n",
+    "df_clean = df.copy()\n",
+    "for col in cols:\n",
+    "    df_clean[col] = df_clean[col].fillna(df_clean[col].median())\n",
+    "\n",
+    "z_scores = df_clean[cols].apply(zscore)\n",
+    "df_clean = df_clean[(z_scores.abs() <= 3).all(axis=1)]"
+   ]
   }
  ],
  "metadata": {
