feat: summary statistics and missing value report for Sierra Leone

--- a/notebooks/sierraleone_eda.ipynb
+++ b/notebooks/sierraleone_eda.ipynb
@@ -206,6 +206,57 @@
     "df = pd.read_csv('../data/sierraleone-bumbuna.csv')\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a4d4a4e",
+   "metadata": {},
+   "source": [
+    "# Summary statistics & missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "80cc6e84",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp          0.0\n",
+       "GHI                0.0\n",
+       "DNI                0.0\n",
+       "DHI                0.0\n",
+       "ModA               0.0\n",
+       "ModB               0.0\n",
+       "Tamb               0.0\n",
+       "RH                 0.0\n",
+       "WS                 0.0\n",
+       "WSgust             0.0\n",
+       "WSstdev            0.0\n",
+       "WD                 0.0\n",
+       "WDstdev            0.0\n",
+       "BP                 0.0\n",
+       "Cleaning           0.0\n",
+       "Precipitation      0.0\n",
+       "TModA              0.0\n",
+       "TModB              0.0\n",
+       "Comments         100.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns = df.columns.str.strip()  # Clean column names\n",
+    "df.describe()\n",
+    "df.isna().sum()\n",
+    "df.isna().mean() * 100  # % of missing values"
+   ]
   }
  ],
  "metadata": {
