feat: imputed missing values in Sierra Leone dataset

--- a/notebooks/sierraleone_eda.ipynb
+++ b/notebooks/sierraleone_eda.ipynb
@@ -257,6 +257,28 @@
     "df.isna().sum()\n",
     "df.isna().mean() * 100  # % of missing values"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e31a3e49",
+   "metadata": {},
+   "source": [
+    "# Handle missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a76e925c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols = ['GHI', 'DNI', 'DHI', 'ModA', 'ModB', 'WS', 'WSgust']\n",
+    "df_clean = df.copy()\n",
+    "\n",
+    "for col in cols:\n",
+    "    df_clean[col] = df_clean[col].fillna(df_clean[col].median())"
+   ]
   }
  ],
  "metadata": {
