feat: removed outliers from Sierra Leone data using z-scores

--- a/notebooks/sierraleone_eda.ipynb
+++ b/notebooks/sierraleone_eda.ipynb
@@ -279,6 +279,29 @@
     "for col in cols:\n",
     "    df_clean[col] = df_clean[col].fillna(df_clean[col].median())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1c96512",
+   "metadata": {},
+   "source": [
+    "# Detect and remove outliers using Z-scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e4f12a2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import zscore\n",
+    "from scipy.stats import zscore\n",
+    "\n",
+    "z_scores = df_clean[cols].apply(zscore)\n",
+    "mask = (z_scores.abs() <= 3).all(axis=1)\n",
+    "df_clean = df_clean[mask]"
+   ]
   }
  ],
  "metadata": {
