feat: summary statistics and missing value report for Togo

--- a/notebooks/togo_eda.ipynb
+++ b/notebooks/togo_eda.ipynb
@@ -211,7 +211,35 @@
    "cell_type": "markdown",
    "id": "d210f242",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Summary stats & missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e4982f21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Comments    100.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()\n",
+    "df.isna().sum().sort_values(ascending=False)\n",
+    "\n",
+    "missing_pct = df.isna().mean() * 100\n",
+    "missing_pct[missing_pct > 5]"
+   ]
   }
  ],
  "metadata": {
