feat: imputed missing values and removed outliers for Togo

--- a/notebooks/togo_eda.ipynb
+++ b/notebooks/togo_eda.ipynb
@@ -240,6 +240,36 @@
     "missing_pct = df.isna().mean() * 100\n",
     "missing_pct[missing_pct > 5]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e8af09e",
+   "metadata": {},
+   "source": [
+    "#  Impute missing values & remove outliers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4fcd10cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import zscore\n",
+    "from scipy.stats import zscore\n",
+    "\n",
+    "cols = ['GHI', 'DNI', 'DHI', 'ModA', 'ModB', 'WS', 'WSgust']\n",
+    "\n",
+    "df_clean = df.copy()\n",
+    "\n",
+    "for col in cols:\n",
+    "    df_clean[col] = df_clean[col].fillna(df_clean[col].median())\n",
+    "\n",
+    "z_scores = df_clean[cols].apply(zscore)\n",
+    "mask = (z_scores.abs() <= 3).all(axis=1)\n",
+    "df_clean = df_clean[mask]"
+   ]
   }
  ],
  "metadata": {
