feat: created summary statistics table for solar metrics

--- a/notebooks/compare_countries.ipynb
+++ b/notebooks/compare_countries.ipynb
@@ -269,6 +269,141 @@
    "cell_type": "markdown",
    "id": "b5b49b4f",
    "metadata": {},
+   "source": [
+    "# Summary statistics table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "22afafee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"3\" halign=\"left\">GHI</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">DNI</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">DHI</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "      <th>std</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "      <th>std</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "      <th>std</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Country</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Benin</th>\n",
+       "      <td>236.23</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>328.29</td>\n",
+       "      <td>166.90</td>\n",
+       "      <td>-0.1</td>\n",
+       "      <td>262.08</td>\n",
+       "      <td>111.66</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>153.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sierra Leone</th>\n",
+       "      <td>185.00</td>\n",
+       "      <td>-0.4</td>\n",
+       "      <td>279.02</td>\n",
+       "      <td>104.13</td>\n",
+       "      <td>-0.1</td>\n",
+       "      <td>200.95</td>\n",
+       "      <td>108.10</td>\n",
+       "      <td>-0.6</td>\n",
+       "      <td>153.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Togo</th>\n",
+       "      <td>223.86</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>317.31</td>\n",
+       "      <td>147.98</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>247.68</td>\n",
+       "      <td>112.78</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>151.57</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 GHI                    DNI                    DHI         \\\n",
+       "                mean median     std    mean median     std    mean median   \n",
+       "Country                                                                     \n",
+       "Benin         236.23    0.7  328.29  166.90   -0.1  262.08  111.66    0.5   \n",
+       "Sierra Leone  185.00   -0.4  279.02  104.13   -0.1  200.95  108.10   -0.6   \n",
+       "Togo          223.86    0.5  317.31  147.98    0.0  247.68  112.78    1.5   \n",
+       "\n",
+       "                      \n",
+       "                 std  \n",
+       "Country               \n",
+       "Benin         153.10  \n",
+       "Sierra Leone  153.69  \n",
+       "Togo          151.57  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summary = df.groupby('Country')[['GHI', 'DNI', 'DHI']].agg(['mean', 'median', 'std']).round(2)\n",
+    "summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d0ed0e4",
+   "metadata": {},
    "source": []
   }
  ],
