feat: added ANOVA test for GHI across countries

--- a/notebooks/compare_countries.ipynb
+++ b/notebooks/compare_countries.ipynb
@@ -404,7 +404,35 @@
    "cell_type": "markdown",
    "id": "5d0ed0e4",
    "metadata": {},
-   "source": []
+   "source": [
+    "# One-way ANOVA test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "66b2ac50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ANOVA result: F = 3833.18, p = 0.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import f_oneway\n",
+    "\n",
+    "f_val, p_val = f_oneway(\n",
+    "    benin['GHI'].dropna(),\n",
+    "    sierraleone['GHI'].dropna(),\n",
+    "    togo['GHI'].dropna()\n",
+    ")\n",
+    "\n",
+    "print(f\"ANOVA result: F = {f_val:.2f}, p = {p_val:.4f}\")\n"
+   ]
   }
  ],
  "metadata": {
