docs: documented key insights from country comparison

--- a/notebooks/compare_countries.ipynb
+++ b/notebooks/compare_countries.ipynb
@@ -433,6 +433,18 @@
     "\n",
     "print(f\"ANOVA result: F = {f_val:.2f}, p = {p_val:.4f}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22e2c27c",
+   "metadata": {},
+   "source": [
+    "## 📌 Key Insights from Cross-Country Comparison\n",
+    "\n",
+    "- **Togo** has the highest average GHI, indicating strong potential for solar energy generation.\n",
+    "- **Benin** shows the most stable GHI readings with the lowest variability.\n",
+    "- The ANOVA test (p < 0.05) confirms that GHI differences between countries are statistically significant."
+   ]
   }
  ],
  "metadata": {
